Google Account Added , Firebase Connected , Login working , User Name Printing , Date and Time Working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">AttendanceSystem</string>
     <string name="attendence_">Attendance System</string>
     <string name="trouble_sig">Trouble signing in? contact your Admin Cell</string>
-    <string name="hello_user_">Hello User!</string>
+    <string name="hello_user_">Hello </string>
     <string name="th_june_202">7TH JUNE,2021</string>
 
 
